--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "etch": "0.9.0",
     "fs-plus": "^3.0.0",
     "humanize-plus": "~1.8.2",
-    "ls-archive": "1.3.1",
+    "ls-archive": "git://github.com/noamross/node-ls-archive.git",
     "temp": "~0.8.1"
   },
   "devDependencies": {
